<resources>
    <string name="app_name">Parstagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="description">Description...</string>
    <string name="takePic">Take Picture</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Signup</string>
    <string name="send">Send</string>
    <string name="message_hint">Say something</string>
    <string name="profilePic">User Profile Picture</string>
</resources>